# feast

./: .gitignore  CMakeLists.txt  README  error  pipe.FCStd
bindings/: CMakeLists.txt  bcs.cpp  dof.cpp  elements.cpp  feast.cpp  geometry.cpp  kernel.cpp  linalg.cpp  materials.cpp  mesh.cpp  meshing.cpp  postprocessing.cpp
include/feast/assembly/: ConstraintApplier.hpp  ElementAssembler.hpp  GlobalAssembler.hpp
include/feast/bcs/: BoundaryConditionResolver.hpp  BoundaryConditions.hpp  RegionBoundaryConditions.hpp
include/feast/dof/: DofManager.hpp  DofMap.hpp
include/feast/elements/: Tet4.hpp
include/feast/geometry/: FaceTag.hpp  Geometry.hpp  Region.hpp
include/feast/geometry/builders/: CuboidBuilder.hpp
include/feast/geometry/primitives/: Cuboid.hpp
include/feast/kernel/: Kernel.hpp
include/feast/linalg/: DenseMatrix.hpp  EigenCGSolver.hpp  EigenDirectSolver.hpp  SparseMatrix.hpp  Triplet.hpp  Vector.hpp
include/feast/materials/: LinearElastic.hpp  Material.hpp
include/feast/mesh/: Element.hpp  ElementType.hpp  Mesh.hpp  Node.hpp
include/feast/meshing/: BoundaryFaceCollector.hpp  MeshBuildResult.hpp  MeshGroups.hpp  StructuredTetMesher.hpp
include/feast/postprocessing/: PostProcessingTypes.hpp  PostProcessor.hpp
include/feast/solvers/: LinearSolver.hpp
python/: complexity.py  plotTesting.py  testing.py
python/feast/: README.md  __init__.py  boundary_conditions.py  geometry.py  meshing.py  utils.py  workflow.py
python/feast/tests/: test_import.py  test_workflow_smoke.py
src/: CMakeLists.txt
src/assembly/: CMakeLists.txt  ConstraintApplier.cpp  ElementAssembler.cpp  GlobalAssembler.cpp
src/bcs/: BoundaryConditionResolver.cpp  BoundaryConditions.cpp  CMakeLists.txt  RegionBoundaryConditions.cpp
src/dof/: CMakeLists.txt  DofManager.cpp  DofMap.cpp
src/elements/: CMakeLists.txt  Tet4.cpp
src/geometry/: CMakeLists.txt  Geometry.cpp
src/geometry/builders/: CuboidBuilder.cpp
src/geometry/primitives/: Cuboid.cpp
src/kernel/: CMakeLists.txt  Kernel.cpp
src/linalg/: CMakeLists.txt  DenseMatrix.cpp  EigenCGSolver.cpp  EigenDirectSolver.cpp  SparseMatrix.cpp  Vector.cpp
src/materials/: CMakeLists.txt  LinearElastic.cpp
src/mesh/: CMakeLists.txt  Mesh.cpp
src/meshing/: BoundaryFaceCollector.cpp  CMakeLists.txt  StructuredTetMesher.cpp
src/postprocessing/: CMakeLists.txt  PostProcessor.cpp
src/solvers/: CMakeLists.txt
tests/: CMakeLists.txt  makeCML.sh  test_assembly.cpp  test_bcs.cpp  test_boundary_condition_resolver.cpp  test_constraint_applier.cpp  test_cuboid_builder.cpp  test_dense_matrix.cpp  test_dof.cpp  test_geometry.cpp  test_kernel.cpp  test_materials.cpp  test_mesh.cpp  test_mesher.cpp  test_postprocessing.cpp  test_region_bcs.cpp  test_solver.cpp  test_sparse_matrix.cpp  test_tet4.cpp  test_vector.cpp
